--- a/my-app/package.json
+++ b/my-app/package.json
@@ -9,7 +9,7 @@
     "cors": "^2.8.5",
     "express": "^4.18.1",
     "express-json": "^1.0.0",
-    "node-fetch": "^3.2.4",
+    "node-fetch": "^2.6.7",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
     "react-scripts": "5.0.1",
@@ -43,5 +43,6 @@
   "main": "index.js",
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {}
 }
