--- a/my-app/package.json
+++ b/my-app/package.json
@@ -2,12 +2,13 @@
   "name": "my-app",
   "version": "0.1.0",
   "private": true,
-   "proxy": "http://localhost:4000",
+  "proxy": "http://localhost:4000",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.2.0",
     "@testing-library/user-event": "^13.5.0",
     "cors": "^2.8.5",
+    "eslint-plugin-react-hooks": "^4.6.0-next-d89657bc8-20220519",
     "express": "^4.18.1",
     "express-json": "^1.0.0",
     "node-fetch": "^2.6.7",
