--- a/my-app/package.json
+++ b/my-app/package.json
@@ -7,12 +7,14 @@
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.2.0",
     "@testing-library/user-event": "^13.5.0",
+    "bootstrap": "^3.4.1",
     "cors": "^2.8.5",
     "eslint-plugin-react-hooks": "^4.6.0-next-d89657bc8-20220519",
     "express": "^4.18.1",
     "express-json": "^1.0.0",
     "node-fetch": "^2.6.7",
     "react": "^18.1.0",
+    "react-bootstrap": "^2.4.0",
     "react-dom": "^18.1.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
