--- a/my-app/package.json
+++ b/my-app/package.json
@@ -8,6 +8,7 @@
     "@testing-library/react": "^13.2.0",
     "@testing-library/user-event": "^13.5.0",
     "bootstrap": "^3.4.1",
+    "browser-router": "^0.2.0",
     "cors": "^2.8.5",
     "eslint-plugin-react-hooks": "^4.6.0-next-d89657bc8-20220519",
     "express": "^4.18.1",
@@ -16,6 +17,7 @@
     "react": "^18.1.0",
     "react-bootstrap": "^2.4.0",
     "react-dom": "^18.1.0",
+    "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
